fix header on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -119,7 +119,7 @@
     min-height: 100vh;
     color: var(--text-color-dark);
     background-color: var(--background-color-light);
-    font-size: 1rem;
+    font-size: clamp(1rem, 0.895rem + 0.4479vw, 1.25rem);
   }
 
   h1,
@@ -157,7 +157,7 @@
     font-weight: 700;
     color: var(--text-color-light);
     text-decoration: none;
-    padding: 1em 1.5em;
+    padding: 0.75em 1.25em;
     background-color: var(--primary-color);
     border-radius: 0.5rem;
     border: 2px solid var(--primary-color);
@@ -172,6 +172,12 @@
   .button-outline {
     color: var(--primary-color);
     background-color: transparent;
+  }
+
+  .menu-button {
+    background-color: transparent;
+    border: none;
+    display: flex;
   }
 }
 
@@ -194,18 +200,23 @@
   }
 
   .logo {
-    max-width: 25%;
+    max-width: 15%;
     img {
       height: auto;
     }
   }
 
   .nav-list {
+    display: none;
     list-style-type: none;
-    display: flex;
+
     gap: 2rem;
     margin-left: auto;
     margin-right: 3rem;
+  }
+
+  .nav-button {
+    display: none;
   }
 
   .hero > .container,
@@ -256,6 +267,18 @@
   }
 
   @media only screen and (min-width: 48rem) {
+    .nav-list {
+      display: flex;
+    }
+
+    .nav-button {
+      display: inline-block;
+    }
+
+    .menu-button {
+      display: none;
+    }
+
     .hero-buttons {
       flex-direction: row;
     }
